No se refresca la base de datos

--- a/src/components/FeaturedPrograms.astro
+++ b/src/components/FeaturedPrograms.astro
@@ -6,7 +6,7 @@ const response = await sql`SELECT * FROM programas`;
 ---
 
 <article>
-  <h2>Programas destacados</h2>
+  <h2>Programas destacados👑</h2>
 
   <article class="contenedor">
     {
