--- a/src/components/NavTables.astro
+++ b/src/components/NavTables.astro
@@ -1,6 +1,6 @@
 <nav>
   <a href="#Programs">Programas destacados 👑</a>
-  <a href="#AllPrograms">Programas de la Comunidad ❤️</a>
+  <a href="#AllPrograms">Todos los programas🚀</a>
   <a href="#UploadProgram">Subir Programa</a>
 </nav>
 
