--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,7 +30,7 @@ const { title } = Astro.props;
 
   @font-face {
     font-family: "geist";
-    src: url("fonts/GeistVF.ttf");
+    src: url("../../public/fonts/GeistVF.ttf");
   }
 
   * {
