--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,10 +4,13 @@ import NavTables from "../components/NavTables.astro";
 import FeaturedPrograms from "../components/FeaturedPrograms.astro";
 import UploadProgram from "../components/UploadProgram.astro";
 import Alert from "../components/Alert.astro";
+import SuccessAlert from "../components/SuccessAlert.astro";
 ---
 
 <Layout title="Soft-Share">
   <Alert/>
+  <SuccessAlert/>
+  
   <main>
     <h1>Soft-Share</h1>
     <p class="presentation">
