Creación básica de la Página de guía para subir archivos

--- a/src/components/UploadProgram.astro
+++ b/src/components/UploadProgram.astro
@@ -5,6 +5,7 @@ import Layout from "../layouts/Layout.astro";
 <Layout title="Subir Programa">
   <main id="UploadProgram">
     <h1>Agrega Tus Programas</h1>
+    <a href="/UploadTutorial">Comó subir correctamente una utilidad</a>
     <form id="programForm">
       <div class="input-group">
         <input
