--- a/src/pages/UploadTutorial.astro
+++ b/src/pages/UploadTutorial.astro
@@ -2,24 +2,99 @@
 import Layout from "../layouts/Layout.astro";
 ---
 
-<Layout title="Subir Archivos Guía"> 
+<Layout title="Subir Archivos Guía">
   <main>
-    <h1>hola gente</h1>
+    <h1>Subir un archivo, programa o utilidad</h1>
+    <article>
+      <h3>Nombre</h3>
+      <p>
+        El nombre es lo más fácil, si queres puedes incluir la versión del
+        programa, la extensión del archivo o si es crackeado. Ej
+      </p>
+      <ul>
+        <li>Programa 1.1.2</li>
+        <li>Archivo con Nombres.txt</li>
+        <li>Programa Crakeado</li>
+      </ul>
+      <h3>Link de Imagen</h3>
+      <p>
+        Para utilizar cualquier imagen como logo de tu programa, esta debe estar subida a internet y ser accesible mediante una URL. Una vez que hayas decidido qué imagen quieres usar, haz clic derecho sobre ella y selecciona 'Copiar dirección de imagen'. Esa es la URL que necesitarás utilizar.
+      </p>
+      <img src="example-image.webp" alt="Imagen guía" />
+      <h3>Link de Descarga</h3>
+      <p>
+        Primero, busca el botón que permite descargar el archivo que deseas subir; luego, haz clic derecho sobre él y selecciona 'Copiar dirección de enlace'. Esa será la URL que deberás utilizar.
+      </p>
+      <img src="example-image2.webp" alt="Imagen guía" />
+      
+      <h3>Detalles</h3>
+      <p>
+        Describe brevemente tu programa. Si haz subido un archivo comprimido (.rar - .7z - etc)puedes usar este campo para proporcionar contraseña si es que la necesita.
+      </p>
+    </article>
   </main>
 </Layout>
+
 <style>
   main {
     width: 70%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    padding-bottom: 200px;
+  }
+  h1 {
+    margin-top: 1.5rem;
+  }
+  p {
+    font-weight: 600;
+    color: rgb(71, 71, 71);
+    margin-bottom: 1rem;
+  }
+  h1 {
+    font-size: 2.5rem;
+    align-self: center;
+  }
+  h3 {
+    font-size: 1.8rem;
+    border-bottom: 0.15rem solid black;
+    margin-bottom: 10px;
+    margin-top: 5rem;
+  }
+  img {
+    border-radius: 2px;
+    box-shadow: 0px 0.5px 5px 1px rgba(0, 0, 0, 0.1);
+    margin-left: 5px;
+    width: 493px;
+    align-self: center;
+    
+  }
+  article {
+    width: 70%;
+    display: flex;
+    flex-direction: column;
+    /* background-color: rgba(83, 83, 83, 0.123); */
+  }
+  ul {
+    display: inline-block;
+    background-color: rgba(128, 128, 128, 0.2);
+    height: auto;
+    padding: 10px 19px;
+    border-radius: 15px;
+    font-size: 0.9rem;
+    font-weight: bold;
+    margin: 0;
+    list-style-type: none;
+  }
+
+  li {
+    padding: 2px 0px;
+  }
+  code {
   }
 
   span {
     color: var(--text-gray-color);
-  }
-
-  p.presentation {
-    text-align: center;
   }
 
   div.hola {
