--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -33,7 +33,7 @@ import { ViewTransitions } from 'astro:transitions';
 
   @font-face {
     font-family: "geist";
-    src: url("../../public/fonts/GeistVF.ttf");
+    src: url("/fonts/GeistVF.ttf");
   }
 
   * {
