--- a/src/components/NavTables.astro
+++ b/src/components/NavTables.astro
@@ -1,8 +1,119 @@
 <nav>
   <a href="#Programs">Programas destacados 👑</a>
-  <a href="#AllPrograms">Todos los programas🚀</a>
+  <a href="#AllPrograms" id="AllPrograms">Todos los programas🚀</a>
   <a href="#UploadProgram">Subir Programa</a>
 </nav>
+
+
+<script type="module">
+  import { neon } from "https://cdn.skypack.dev/@neondatabase/serverless";
+
+  const sql = neon(
+    "postgresql://Programs-db_owner:gt7QxJLNI4rP@ep-shrill-brook-a5j8odhx.us-east-2.aws.neon.tech/Programs-db?sslmode=require"
+  );
+
+  LoadPrograms();
+
+  const allPrograms = document.querySelector("#AllPrograms")
+  allPrograms.addEventListener("click", () => LoadPrograms());
+
+  // Agregar evento para cuando se presione enter en el input para buscar
+  async function LoadPrograms() {
+    const response = await sql`SELECT * FROM programas`;
+
+    const programList = document.getElementById("programList");
+
+    // Actualiza el contenido del contenedor con los nuevos programas
+    programList.innerHTML = response
+      .map(
+        (programa) => `
+        <div class="div-container">
+          <header>
+            <img
+              src="${programa.link_de_imagen}"
+              alt="${programa.nombre}"
+              onerror="this.onerror=null; this.src='https://s3.amazonaws.com/www-inside-design/uploads/2020/10/aspect-ratios-blogpost-1x1-1.png';"
+            />
+            <h3>
+              <a rel="noreferrer" href="${programa.link_de_descarga}">
+                ${programa.nombre}
+              </a>
+            </h3>
+          </header>
+          <span>${programa.detalles}</span>
+        </div>
+      `
+      )
+      .join("");
+      makeStyles()
+  }
+    // Observar el ancho de la pantalla para hacer un diseño responsive
+    function makeStyles() {
+      window.addEventListener("resize", responsive);
+
+    // Llamada incial
+    responsive();
+
+    function responsive() {
+      // Conseguir el ancho de la pantalla
+      const size = window.innerWidth;
+
+      const contenedor = document.querySelector("article.contenedor");
+
+      if (size <= 730) {
+        // Pantalla menor a 730px
+        contenedor.style.gridTemplateColumns = "100%";
+      } else if (size <= 1200) {
+        // Pantalla menor a 1200px
+        contenedor.style.gridTemplateColumns = "50% 50%";
+      } else {
+        // Pantalla mayor a 1200px
+        contenedor.style.gridTemplateColumns = "33.33% 33.33% 33.33%";
+      }
+    }
+
+    const div_container = programList.querySelectorAll("div"); // Cambié 'ancores' a 'anchors'
+    div_container.forEach((div) => {
+      div.style.padding = "10px";
+    });
+
+    const h2 = document.querySelector("h2");
+    h2.style.borderBottom = "2px solid var(--text-gray-color)";
+    h2.style.marginBottom = "10px";
+
+    const contenedor = document.querySelector("article.contenedor");
+    contenedor.style.display = "grid";
+    contenedor.style.gap = "9px 3px";
+
+    const headers = programList.querySelectorAll("header");
+    headers.forEach((header) => {
+      header.style.display = "flex";
+      header.style.gap = "4px";
+      header.style.alignItems = "center";
+    });
+
+    const images = programList.querySelectorAll("img");
+    images.forEach((img) => {
+      img.style.height = "32px";
+      img.style.width = "auto";
+    });
+
+    const anchors = programList.querySelectorAll("a"); // Cambié 'ancores' a 'anchors'
+    anchors.forEach((a) => {
+      a.style.textDecoration = "none"; // Aplica el estilo a los enlaces
+      a.style.color = "unset"; // Define un color específico
+    });
+
+    const spans = programList.querySelectorAll("span");
+    spans.forEach((span) => {
+      span.style.marginTop = "5px";
+      span.style.color = "var(--text-gray-color)";
+      span.style.width = "98%";
+      span.style.display = "block";
+      span.style.overflowWrap = "break-word";
+    });
+    }
+</script>
 
 <style>
   a {
